Fix - scrollbar

--- a/estilos/estilomensagem.css
+++ b/estilos/estilomensagem.css
@@ -59,7 +59,7 @@ h4 {
 }
 
 .foto-grupo {
-    overflow: auto;
+    overflow: hidden;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -95,7 +95,9 @@ h4 {
     background-color: #ece1c8;
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
 }
 
 .mensagens-pessoa, .mensagens-eu {
